<resources>
    <string name="app_name">investment_app</string>
    <string name="login">Login</string>
    <string name="sign_up">Зарегестрироваться</string>
    <string name="already_have_an_account_login">Already have an account? <u>Login</u></string>
    <string name="new_here_sign_up">New here? <u>Sign up</u></string>
    <string name="registerButton">Зарегестрироваться</string>
    <string name="loginButton">Авторизоваться</string>
    <string name="investment_teaching">Обучение инвестициям</string>
    <string name="newbies">Здесь мы научим новичков инвестировать</string>
    <string name="full_name">ФИО</string>
    <string name="birth_date">Дата рождения</string>
    <string name="citizenship">Гражданство</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="registration_continue">Продолжить</string>
    <string name="passport">Паспортные данные</string>
    <string name="passport_data">Серия и номер</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="news">Новости</string>
    <string name="last">Последние</string>
    <string name="saved">Избранное</string>
    <string name="new_1">Очередная новость</string>
    <string name="plain">РААА</string>
    <string name="button">Button</string>
    <string name="new1">Button</string>
    <string name="new_3">new_2</string>
    <string name="new3">new3</string>
    <string name="time">TextView</string>
    <string name="source">TextView</string>
    <string name="more">TextView</string>
    <string name="details">TextView</string>
    <string name="detail">TextView</string>
    <string name="src">TextView</string>
    <string name="data">TextView</string>
    <string name="new_4">new4</string>
    <string name="savebt">Добавить в избранное</string>
    <string name="textnew">TextNew</string>
    <string name="textdata">textdata</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="main">Главная страница</string>
</resources>